--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,10 @@
     gap: 20px;
 }
 .dashboard-content{
+    margin-top: 100px;
     background: white;
     flex: 1;
-    border-radius: 20px;
+    border-radius: 10px;
     padding: 2rem;
     display: flex;
     gap: 1.5rem;
