--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -3,23 +3,38 @@
     flex-direction: column;
     gap: 2.3rem;
     height: 94vh;
+    margin-top: 40px;
+    
 }
 .logo{
     text-align: center;
-    padding: 20px;
+    padding: 20px 5px;
     color: black;
     align-items: center;
     display: flex;
     gap: 20px;
+    display: block;
 }
 .logo.icon{
     font-size: 1.4rem;
 }
+.logo svg {
+    width: 15vw;
+    height: 15vh;
+}
 .menu-list{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
 }
+
+.menu-list a {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300 !important;
+    font-style: normal;
+    font-size: 15px !important;
+}
+
 .menu-list .item{
     display: flex;
     align-items: center;
